# cardelli

./: README.md  demo.js  package.json
hs/: Guardfile  Main.hs  README.md  cardelli.cabal
hs/src/: AST.hs  Analyze.hs  CopyType.hs  Env.hs  Eval.hs  FreshType.hs  Parse.hs  ParseType.hs  RetrieveEnv.hs  ShowExpr.hs  Simplify.hs  Type.hs  TypeEnv.hs  Unify.hs  VarName.hs
hs/test/: ASTGen.hs  AnalyzeSpec.hs  EnvSpec.hs  EvalSpec.hs  FreshTypeSpec.hs  ParseSpec.hs  ParseTypeSpec.hs  RetrieveEnvSpec.hs  SimplifySpec.hs  TypeGen.hs  TypeSpec.hs  UnifySpec.hs
js/: demo.js
js/src/: symbol.js  type.js  typecheck.js  typelist.js
js/test/: unify_type_spec.js
paper/: types.m2
src/: ast.js  env.js  nongenericvars.js  parse.js  unify_type.js
test/: parse_spec.js
