name:                cardelli
version:             0.1.0.0
synopsis:            A description of the project.
-- description:
license:             MIT
--license-file:      LICENSE
author:              Pete Bevin
maintainer:          pete@petebevin.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.20

executable repl
  hs-source-dirs: src, test, .
  main-is: Main.hs
  default-language: Haskell2010
  -- other-modules:
  build-depends: base, parsec, mtl, containers, haskeline, QuickCheck
  ghc-options:

test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: src, test
  main-is: Spec.hs
  default-language: Haskell2010
  build-depends: base, parsec, mtl, containers, QuickCheck, hspec
  ghc-options:
